# weather_model_continue_dev

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
airflow/dags/: weather_pipeline_dag.py
data/raw/: sydney_weather.csv  weather_10percent.csv
docker/training/: Dockerfile.training
docker_images/: Dockerfile_airflow  Dockerfile_cron  Dockerfile_mlflow  Dockerfile_model  Dockerfile_sql  Dockerfile_streamlit
make_and_process_data/: Dockerfile  make_dataset.py
mysql/: Dockerfile  create_table.sql  import_data.sql
notebooks/: DataExploration.ipynb  Preprocessing.py
reports/: MLFlow-Screenshots.docx
src/: cron_pipeline.sh
src/data/: Preprocessing.py  convert_data_to_sql.py  create_table.sql  import_data.sql  make_dataset.py  preprocessing.py  test_table.sql
src/features/: mlflow_server.sh
src/models/: predict_model.py  train_model.py  weather_api.py
src/tests/: test_model.py  test_sql.py
src/visualization/: Streamlit.py
