[project]
name = "weather-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "click==8.3.1",
    "fastapi==0.121.2",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.11",
    "mlflow>=3.6.0",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-learn>=1.7.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.49.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uvicorn==0.38.0",
]
